package pang.level;

message Level
{
  optional int32 seed = 1 [default = 1337];
  optional int32 width = 2 [default = 100];
  optional int32 height = 3 [default = 100];

  optional int32 num_rooms = 4 [default = 10];
  optional int32 min_room_width = 5 [default = 10];
  optional int32 max_room_width = 6 [default = 20];

  optional int32 min_room_height = 7 [default = 10];
  optional int32 max_room_height = 8 [default = 20];
}
